# Weaver--Cathedral-

./: MASTER_CONSOLIDATION_V2.md  README.md  pyproject.toml
.github/workflows/: agent-os-v2.yml  ci.yml
core/: __init__.py
core/authority/: README.md  __init__.py  __main__.py  bundles.py  cli.py  models.py  receipts.py  replay.py  verifier.py
core/authority/fixtures/: bad_hash_envelope.json  valid_envelope.json
core/authority/schemas/: envelope.json  promotion.json  receipt.json
core/authority/tests/: test_bundles.py  test_integration_flow.py  test_receipts.py  test_replay.py  test_verifier.py
forge/demos/: DEMO_SPEC.md
forge/demos/authority_spine_001/: README.md  demo.yaml
forge/demos/authority_spine_001/scripts/: replay_demo.sh  run.sh  verify.sh
governance/: PORTFOLIO_SOURCE_REGISTRY.md  evidence_ladder.md  open_gap_ledger.md  source_boundary.md
skills/: SKILL_SPEC.md
