[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weaver-cathedral"
version = "0.1.0"
description = "Governed verification spine for Weaver Cathedral Master Build"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
weaver-authority = "core.authority.cli:main"

[tool.setuptools.packages.find]
include = ["core*"]

[tool.pytest.ini_options]
testpaths = ["core/authority/tests"]
pythonpath = ["."]
